public interface Movable {
    void move(double dx, double dy);
}
